[workspace]
members = ["verification/*"]

[package]
name = "qryxips_competitive_programming_library"
version = "0.0.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
license = "CC0-1.0"
publish = false

[lib]
name = "_" # This crate is not intended to be used directly.

[dependencies]
qryxips-competitive-programming-library-buffered-print = { version = "0.0.0", path = "./crates/io/buffered_print" }
qryxips-competitive-programming-library-input = { version = "0.0.0", path = "./crates/io/input" }
qryxips-competitive-programming-library-miller-rabin = { version = "0.0.0", path = "./crates/math/miller_rabin" }
qryxips-competitive-programming-library-montmort-number = { version = "0.0.0", path = "./crates/math/montmort_number" }
qryxips-competitive-programming-library-partition-point = { version = "0.0.0", path = "./crates/partition_point" }
qryxips-competitive-programming-library-rho = { version = "0.0.0", path = "./crates/math/rho" }
qryxips-competitive-programming-library-tonelli-shanks = { version = "0.0.0", path = "./crates/math/tonelli_shanks" }
qryxips-competitive-programming-library-xorshift = { version = "0.0.0", path = "./crates/xorshift" }
