[workspace]
members = ["proc-macros/*", "verification/*"]

[package]
name = "qryxips_competitive_programming_library"
version = "0.0.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
license = "CC0-1.0"
repository = "https://github.com/qryxip/oj-verify-playground"
publish = false

[lib]
name = "_" # This crate is not intended to be used directly.

[dependencies]
qryxips-competitive-programming-library-buffered-print = { version = "0.0.0", path = "./crates/io/manifests/buffered_print" }
qryxips-competitive-programming-library-gcd = { version = "0.0.0", path = "./crates/integer/manifests/gcd" }
qryxips-competitive-programming-library-input = { version = "0.0.0", path = "./crates/io/manifests/input" }
qryxips-competitive-programming-library-miller-rabin = { version = "0.0.0", path = "./crates/prime/manifests/miller_rabin" }
qryxips-competitive-programming-library-montmort-number = { version = "0.0.0", path = "./crates/integer/manifests/montmort_number" }
qryxips-competitive-programming-library-partition-point = { version = "0.0.0", path = "./crates/integer/manifests/partition_point" }
qryxips-competitive-programming-library-rho = { version = "0.0.0", path = "./crates/prime/manifests/rho" }
qryxips-competitive-programming-library-tonelli-shanks = { version = "0.0.0", path = "./crates/modulo/manifests/tonelli_shanks" }
qryxips-competitive-programming-library-xorshift = { version = "0.0.0", path = "./crates/integer/manifests/xorshift" }
