[workspace]
members = ["proc-macros/*", "verification/*"]

[package]
name = "qryxip-competitive"
version = "0.0.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
license = "CC0-1.0"
repository = "https://github.com/qryxip/competitive-programming-library"
publish = false

[lib]
name = "_" # This crate is not intended to be used directly.

[dependencies]
qryxip-competitive-buffered-print = { version = "0.0.0", path = "./crates/io/manifests/buffered_print" }
qryxip-competitive-dijkstra = { version = "0.0.0", path = "./crates/graph/manifests/dijkstra" }
qryxip-competitive-gcd = { version = "0.0.0", path = "./crates/integer/manifests/gcd" }
qryxip-competitive-input = { version = "0.0.0", path = "./crates/io/manifests/input" }
qryxip-competitive-miller-rabin = { version = "0.0.0", path = "./crates/prime/manifests/miller_rabin" }
qryxip-competitive-montmort-number = { version = "0.0.0", path = "./crates/integer/manifests/montmort_number" }
qryxip-competitive-partition-point = { version = "0.0.0", path = "./crates/integer/manifests/partition_point" }
qryxip-competitive-rho = { version = "0.0.0", path = "./crates/prime/manifests/rho" }
qryxip-competitive-sieve = { version = "0.0.0", path = "./crates/prime/manifests/sieve" }
qryxip-competitive-tonelli-shanks = { version = "0.0.0", path = "./crates/modulo/manifests/tonelli_shanks" }
qryxip-competitive-xorshift = { version = "0.0.0", path = "./crates/integer/manifests/xorshift" }
