[workspace]

[package]
name = "xtask"
version = "0.0.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
license = "CC0-1.0"
repository = "https://github.com/qryxip/oj-verify-playground"
publish = false

[dependencies]
anyhow = "1.0.35"
cargo_metadata = "0.12.1"
duct = "0.13.4"
glob = "0.3.0"
itertools = "0.9.0"
pulldown-cmark = "0.8.0"
quote = "1.0.7"
structopt = "0.3.21"
syn = { version = "1.0.54", features = ["full", "parsing"] }
tempfile = "3.1.0"
