[package]
name = "qryxip-competitive-fastout"
version = "0.0.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
license = "CC0-1.0"
repository = "https://github.com/qryxip/competitive-programming-library"
publish = false

[package.metadata.cargo-equip.watt.proc-macro-attribute]
fastout = { path = "{{ out_dir }}/fastout_impl.wasm", function = "fastout" }

[lib]
proc-macro = true

[dependencies]
watt = "0.4.0"

[build-dependencies]
wattbuild = { git = "https://github.com/qryxip/wattbuild" }
