[package]
name = "atcoder"
version = "0.0.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
license = "CC0-1.0"
publish = false

[package.metadata.cargo-compete.bin]
abc162-c = { problem = "https://atcoder.jp/contests/abc162/tasks/abc162_c" }
abc174-e = { problem = "https://atcoder.jp/contests/abc174/tasks/abc174_e" }

[dependencies]
qryxip-competitive-gcd = { path = "../../crates/integer/gcd" }
qryxip-competitive-input = { path = "../../crates/io/input" }
qryxip-competitive-partition-point = { path = "../../crates/integer/partition_point" }
