[package]
name = "library-checker"
version = "0.0.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
license = "CC0-1.0"
publish = false

[dependencies]
ac-library-rs-parted-modint = { git = "https://github.com/qryxip/ac-library-rs-parted" }
qryxip-competitive-fastout = { path = "../../proc-macros/fastout" }
qryxip-competitive-input = { path = "../../crates/io/manifests/input" }
qryxip-competitive-montmort-number = { path = "../../crates/integer/manifests/montmort_number" }
qryxip-competitive-tonelli-shanks = { path = "../../crates/modulo/manifests/tonelli_shanks" }
