[package]
name = "library-checker"
version = "0.0.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
license = "CC0-1.0"
publish = false

[package.metadata.cargo-compete.bin]
montmort-number-mod = { problem = "https://judge.yosupo.jp/problem/montmort_number_mod" }
sqrt-mod = { problem = "https://judge.yosupo.jp/problem/sqrt_mod" }

[dependencies]
ac-library-rs-parted-modint = { git = "https://github.com/qryxip/ac-library-rs-parted" }
qryxip-competitive-fastout = { path = "../../crates/io/fastout" }
qryxip-competitive-input = { path = "../../crates/io/input" }
qryxip-competitive-montmort-number = { path = "../../crates/integer/montmort_number" }
qryxip-competitive-tonelli-shanks = { path = "../../crates/modulo/tonelli_shanks" }
