[package]
name = "yukicoder"
version = "0.0.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
license = "CC0-1.0"
publish = false

[dependencies]
qryxip-competitive-input = { path = "../../crates/io/manifests/input" }
qryxip-competitive-partition-point = { path = "../../crates/integer/manifests/partition_point" }
