[package]
name = "yukicoder"
version = "0.0.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
license = "CC0-1.0"
publish = false

[package.metadata.cargo-compete.bin]
723 = { problem = "https://yukicoder.me/problems/no/723" }

[dependencies]
qryxip-competitive-input = { path = "../../libs/io/input" }
qryxip-competitive-partition-point = { path = "../../libs/integer/partition_point" }
