[package]
name = "qryxips-competitive-programming-library-miller-rabin"
version = "0.0.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
license = "CC0-1.0"
publish = false

[lib]
name = "miller_rabin"

[dependencies]
__acl_modint = { package = "ac-library-rs-parted-modint", git = "https://github.com/qryxip/ac-library-rs-parted" }
