[package]
name = "qryxips-competitive-programming-library-rho"
version = "0.0.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
license = "CC0-1.0"
publish = false

[lib]
name = "rho"

[dependencies]
qryxips-competitive-programming-library-miller-rabin = { version = "0.0.0", path = "../miller_rabin" }
