[package]
name = "qryxip-competitive-tonelli-shanks"
version = "0.0.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
license = "CC0-1.0"
repository = "https://github.com/qryxip/competitive-programming-library"
publish = false

[lib]
name = "tonelli_shanks"

[dependencies]
__xorshift = { package = "qryxip-competitive-xorshift", version = "0.0.0", path = "../../integer/xorshift" }
__acl_modint = { package = "ac-library-rs-parted-modint", git = "https://github.com/qryxip/ac-library-rs-parted" }
