[workspace]

[patch.crates-io]
proc-macro2 = { git = "https://github.com/dtolnay/watt" }

[package]
name = "fastout_impl"
version = "0.0.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
license = "CC0-1.0"
repository = "https://github.com/qryxip/competitive-programming-library"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.7"
syn = { version = "1.0.55", features = ["full", "visit"] }
