[package]
name = "qryxips-competitive-programming-library-montmort-number"
version = "0.0.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
license = "CC0-1.0"
repository = "https://github.com/qryxip/oj-verify-playground"
publish = false

[lib]
name = "montmort_number"
path = "../../sourcefiles/montmort_number.rs"

[dev-dependencies]
pretty_assertions = "0.6.1"
