[package]
name = "qryxips-competitive-programming-library-partition-point"
version = "0.0.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
license = "CC0-1.0"
repository = "https://github.com/qryxip/oj-verify-playground"
publish = false

[lib]
name = "partition_point"
path = "../../sourcefiles/partition_point.rs"
