[package]
name = "qryxips-competitive-programming-library-buffered-print"
version = "0.0.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
license = "CC0-1.0"
repository = "https://github.com/qryxip/oj-verify-playground"
publish = false

[lib]
name = "buffered_print"
path = "../../sourcefiles/buffered_print.rs"
