[package]
name = "qryxips-competitive-programming-library-tonelli-shanks"
version = "0.0.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
license = "CC0-1.0"
repository = "https://github.com/qryxip/oj-verify-playground"
publish = false

[lib]
name = "tonelli_shanks"
path = "../../sourcefiles/tonelli_shanks.rs"

[dependencies]
__xorshift = { package = "qryxips-competitive-programming-library-xorshift", version = "0.0.0", path = "../../../integer/manifests/xorshift" }
__acl_modint = { package = "ac-library-rs-parted-modint", git = "https://github.com/qryxip/ac-library-rs-parted" }
