[package]
name = "qryxips-competitive-programming-library-rho"
version = "0.0.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
license = "CC0-1.0"
repository = "https://github.com/qryxip/oj-verify-playground"
publish = false

[lib]
name = "rho"
path = "../../sourcefiles/rho.rs"

[dependencies]
qryxips-competitive-programming-library-gcd = { version = "0.0.0", path = "../../../integer/manifests/gcd" }
qryxips-competitive-programming-library-miller-rabin = { version = "0.0.0", path = "../miller_rabin" }
