[package]
name = "qryxip-competitive-rho"
version = "0.0.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
license = "CC0-1.0"
repository = "https://github.com/qryxip/competitive-programming-library"
publish = false

[lib]
name = "rho"
path = "../../sourcefiles/rho.rs"

[dependencies]
qryxip-competitive-gcd = { version = "0.0.0", path = "../../../integer/manifests/gcd" }
qryxip-competitive-miller-rabin = { version = "0.0.0", path = "../miller_rabin" }
